# starling

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAMM_07212021.ipynb  DAMM_adam_07292021.ipynb  DAMM_adam_08102021.ipynb  Dockerfile  LICENSE  LICENSE.txt  README.md  Snakefile  VI_DAMM_0902.ipynb  VI_DAMM_0903_YS1_lr1e_3_hd20.ipynb  VI_R_sweep.ipynb  _7script_train.py  cellsize_plane_dev.ipynb  class_gmm_em_expressions_cell_sizes.ipynb  config.yml  core.py  correlation_alternative.ipynb  dgmm_em.ipynb  dgmm_em_final.ipynb  fixed_cluster_size.R  genindex.html  getting-started.ipynb  index.html  metrics.R  mlem_nso.ipynb  non_function_version_gmm_em_expressions_cell_sizes.ipynb  noxfile.py  objects.inv  p3_basel_exp.ipynb  p3_eddy_exp.ipynb  p3_meta_exp.ipynb  plausibility_score.R  py-modindex.html  pyproject.toml  real_all_versions.ipynb  requirement.txt  (+14 more)
.github/workflows/: constraints.txt  main.yml
_modules/: index.html
_modules/starling/: starling.html  utility.html
_sources/: starling.rst.txt
_sources/tutorial/: getting-started.ipynb.txt
_static/css/: custom.css
code/: algo.py
code/em/: DAMM_081221-kcplay.ipynb  EM-skeleton.py  non_function_version_gmm_em_expressions_cell_sizes.ipynb
code/misc/: damm_011122.ipynb
code/vi/: VI_DAMM_0903_lr1e_3_hd20.ipynb  VI_DAMM_0903_lr1e_3_hd20_hl5.ipynb
config/: basel_channel.yaml  config.yaml  meta_channel.yaml  tonsil_channel.yaml
damm/: __init__.py  damm.py
damm/data/basel/: tr_exp.h5ad
damm/data/eddy/: tr_exp.h5ad
damm/old/: fixed_cluster_size1.R  setup.py  tutorial.ipynb
damm/old/damm/: run_damm_locally_basel.ipynb  run_damm_locally_basel1.ipynb
damm/old/em/: DAMM_adam_07262021.ipynb  GMM_class_torch_EM.ipynb  func_class.py
damm/old/vi/: VI_DAMM_0903.ipynb
data/basel/: te_exp.h5ad
data/eddy/: te_exp.h5ad
data/meta/: te_exp.h5ad  tr_exp.h5ad
docs/: conf.py  index.md  reference.md  requirements1.txt  sample_input.h5ad  tutorial.ipynb  usage.md
docs/log/lightning_logs/version_1/checkpoints/: epoch=99-step=2700.ckpt
docs/log/lightning_logs/version_2/checkpoints/: epoch=99-step=2700.ckpt
docs/source/: conf.py  index.rst  tutorials.md  utility.rst
docs/source/tutorial/: getting-started.ipynb
docs/tutorial/: getting-started.ipynb  tutorial.ipynb
docs/tutorial/.ipynb_checkpoints/: getting-started-checkpoint.ipynb
docs/tutorial/log/lightning_logs/version_0/: events.out.tfevents.1697651167.dev1gpu.mshri.on.ca.1507548.0
docs/tutorial/log/lightning_logs/version_0/checkpoints/: epoch=99-step=2700.ckpt
docs/tutorial/log/lightning_logs/version_1/: events.out.tfevents.1697666613.dev1gpu.mshri.on.ca.2749419.0
docs/tutorial/log/lightning_logs/version_2/: events.out.tfevents.1697674392.dev1gpu.mshri.on.ca.2835052.0
misc/damm/: mlem_nso_1125.ipynb  mlem_nso_yfcs.py  p3_eddy_exp.ipynb  run_all_locally_eddy_PG.ipynb  run_damm_locally_eddy.ipynb  train.py
misc/em/: DAMM_081021.ipynb  non_function_version_071421.ipynb
misc/vi/: VI_DAMM_0831.ipynb
old/damm/: mlem_nso_ncs.py  run_all_locally_meta_PG.ipynb  view_png_plots.ipynb
old/em/: DAMM-IMC.ipynb  DAMM_081221.ipynb
output/: init_centroids.csv  star_centroids.csv  star_labels.csv
src/starling/: __init__.py  __main__.py  starling.py
starling/: starling.py  utility.py
tests/: __init__.py  conftest.py  test_main.py  test_sanity.py  test_starling.py  test_utility.py
tutorial/: getting-started.html
utils/: core3.py  functions.py  starling_core2.py
