[tool.poetry]
name = "starling"
version = "0.1.0"
description = "A short description of the package"
repository = "https://github.com/camlab-bioml/starling"
authors = ["Jett (Yuju) Lee <yulee@lunenfeld.ca>"]
readme = "README.md"
keywords = ["imaging cytometry classifier single-cell"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.12.1"
pytorch-lightning = "2.1.0"
scanpy = "1.9.5"
phenograph = "^1.5.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
isort = "^5.13.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
tensorboard = "^2.15.1"
lightning-lite = "^1.8.6"
ipykernel = "^6.29.0"
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"
autodocsumm = "^0.2.12"
docutils = "^0.20.1"
myst-nb = "^1.0.0"
jupytext = "^1.16.1"
autodoc = "^0.5.0"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
